# mazer

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  ROADMAP.md  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  spdx_update.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug_report.md  Feature_request.md
ansible_galaxy/: archive.py  build.py  collection.py  collection_artifact.py  collection_artifact_file_manifest.py  collection_artifact_manifest.py  collection_info.py  collection_members.py  collections_lockfile.py  content_archive.py  content_db.py  content_install_info.py  content_repo_galaxy_metadata.py  content_repository.py  content_spec.py  content_spec_parse.py  content_version.py  dependencies.py  display.py  download.py  galaxy_content_spec.py  galaxy_repository_spec.py  install.py  install_info.py  installed_collection_db.py  installed_content_db.py  installed_content_item_db.py  installed_namespaces_db.py  installed_repository_db.py  matchers.py  mazer_version.py  multipart_form.py  repository.py  repository_archive.py  repository_db.py  repository_spec.py  repository_spec_parse.py  repository_version.py  requirements.py  rest_api.py  (+3 more)
ansible_galaxy/actions/: build.py  info.py  init.py  install.py  list.py  migrate_role.py  publish.py  (+2 more)
ansible_galaxy_cli/: __main__.py  main.py
config/: galaxy-localhost.yml  galaxy.yml  mazer-logging.yml
tests/: conftest.py  use-cases.sh  use-cases.txt
(+209 files in other folders)
